==> Mstfmrt1/STM32-PROJECTS/STM32F407_DC_MOTOR_LIBRARY/Core/Src/stm32f4xx_motordriver.c <==


#include "stm32f4xx_motordriver.h"
#include "main.h"


const DC_MOTOR_CfgType DC_MOTOR_CfgParam[DC_MOTOR_UNITS] =
{
	// DC MOTOR 1 Configurations
    {
	    GPIOD,
		GPIOD,
		GPIO_PIN_9,
		GPIO_PIN_10,
		TIM4,
		TIM_CHANNEL_2,
		84,
		DC_MOTOR_F_PWM,
		DC_MOTOR_PWM_RES
	}
};
	// DC MOTOR 2 Configurations
/**/



void DC_MOTOR_Init(uint8_t MOTOR_Instance)
{
	GPIO_InitTypeDef GPIO_InitStruct = {0};
	/*TIM_ClockConfigTypeDef sClockSourceConfig = {0};
    TIM_MasterConfigTypeDef sMasterConfig = {0};
    TIM_OC_InitTypeDef sConfigOC = {0};
    TIM_HandleTypeDef htim;
    uint32_t PSC_Value = 0;
    uint32_t ARR_Value = 0;
    uint8_t i = 0;*/

	/*--------[ Configure The 2 Direction Control GPIO Pins ]-------*/

    if(DC_MOTOR_CfgParam[MOTOR_Instance].DIR1_GPIO == GPIOA || DC_MOTOR_CfgParam[MOTOR_Instance].DIR2_GPIO == GPIOA)
    {
    	__HAL_RCC_GPIOA_CLK_ENABLE();
    }
    else if(DC_MOTOR_CfgParam[MOTOR_Instance].DIR1_GPIO == GPIOB || DC_MOTOR_CfgParam[MOTOR_Instance].DIR2_GPIO == GPIOB)
    {
    	__HAL_RCC_GPIOB_CLK_ENABLE();
    }
    else if(DC_MOTOR_CfgParam[MOTOR_Instance].DIR1_GPIO == GPIOC || DC_MOTOR_CfgParam[MOTOR_Instance].DIR2_GPIO == GPIOC)
    {
        __HAL_RCC_GPIOC_CLK_ENABLE();
    }
    else if(DC_MOTOR_CfgParam[MOTOR_Instance].DIR1_GPIO == GPIOD || DC_MOTOR_CfgParam[MOTOR_Instance].DIR2_GPIO == GPIOD)
    {
        __HAL_RCC_GPIOD_CLK_ENABLE();
    }
    else if(DC_MOTOR_CfgParam[MOTOR_Instance].DIR1_GPIO == GPIOE || DC_MOTOR_CfgParam[MOTOR_Instance].DIR2_GPIO == GPIOE)
    {
        __HAL_RCC_GPIOE_CLK_ENABLE();
    }
	GPIO_InitStruct.Pin = DC_MOTOR_CfgParam[MOTOR_Instance].DIR1_PIN;
	GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
	HAL_GPIO_Init(DC_MOTOR_CfgParam[MOTOR_Instance].DIR1_GPIO, &GPIO_InitStruct);
	GPIO_InitStruct.Pin = DC_MOTOR_CfgParam[MOTOR_Instance].DIR2_PIN;
	GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
	HAL_GPIO_Init(DC_MOTOR_CfgParam[MOTOR_Instance].DIR2_GPIO, &GPIO_InitStruct);
	HAL_GPIO_WritePin(DC_MOTOR_CfgParam[MOTOR_Instance].DIR1_GPIO, DC_MOTOR_CfgParam[MOTOR_Instance].DIR1_PIN, 0);
	HAL_GPIO_WritePin(DC_MOTOR_CfgParam[MOTOR_Instance].DIR2_GPIO, DC_MOTOR_CfgParam[MOTOR_Instance].DIR2_PIN, 0);

	/*--------[ Calculate The PSC & ARR Values To Set PWM Resolution And Approx. The F_pwm ]-------*/

	//Those Equations Sets The PWM Resolution & Approximates The F_pwm
	/*ARR_Value = 1;
	for(i=0; i<DC_MOTOR_CfgParam[MOTOR_Instance].PWM_RES_BITS; i++)
	{
		ARR_Value *= 2;
	}
	PSC_Value = (uint32_t) ((DC_MOTOR_CfgParam[MOTOR_Instance].TIM_CLK_MHz*1000000) / (ARR_Value*DC_MOTOR_CfgParam[MOTOR_Instance].PWM_FREQ_Hz));
	PSC_Value--;
	ARR_Value -= 2;*/

	//--------[ Configure The DC Motor PWM Timer Channel ]------

	/*htim.Instance = DC_MOTOR_CfgParam[MOTOR_Instance].TIM_Instance;
	htim.Init.Prescaler = 83;
	htim.Init.CounterMode = TIM_COUNTERMODE_UP;
	htim.Init.Period = 99;
	htim.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;
	htim.Init.AutoReloadPreload = TIM_AUTORELOAD_PRELOAD_ENABLE;
	HAL_TIM_Base_Init(&htim4);
	sClockSourceConfig.ClockSource = TIM_CLOCKSOURCE_INTERNAL;
	HAL_TIM_ConfigClockSource(&htim4, &sClockSourceConfig);
	HAL_TIM_PWM_Init(&htim4);
	sMasterConfig.MasterOutputTrigger = TIM_TRGO_RESET;
	sMasterConfig.MasterSlaveMode = TIM_MASTERSLAVEMODE_DISABLE;
	HAL_TIMEx_MasterConfigSynchronization(&htim4, &sMasterConfig);
	sConfigOC.OCMode = TIM_OCMODE_PWM1;
	sConfigOC.Pulse = 0;
	sConfigOC.OCPolarity = TIM_OCPOLARITY_HIGH;
	sConfigOC.OCFastMode = TIM_OCFAST_DISABLE;
	HAL_TIM_PWM_ConfigChannel(&htim4, &sConfigOC, DC_MOTOR_CfgParam[MOTOR_Instance].PWM_TIM_CH);
	HAL_TIM_MspPostInit(&htim4);

	//--------[ Start The PWM Channel ]-------

	HAL_TIM_PWM_Start(&htim, DC_MOTOR_CfgParam[MOTOR_Instance].PWM_TIM_CH);
}*/
}

void DC_MOTOR_Start(uint8_t MOTOR_Instance, uint8_t DIR, uint16_t SPEED)
{
	/* Write To The 2 Direction Control Pins */
	if(DIR == DIR_ClockWıse)
	{
		HAL_GPIO_WritePin(DC_MOTOR_CfgParam[MOTOR_Instance].DIR1_GPIO, DC_MOTOR_CfgParam[MOTOR_Instance].DIR1_PIN, 1);
		HAL_GPIO_WritePin(DC_MOTOR_CfgParam[MOTOR_Instance].DIR2_GPIO, DC_MOTOR_CfgParam[MOTOR_Instance].DIR2_PIN, 0);
	}
	else if(DIR == DIR_CClockWıse)
	{
		HAL_GPIO_WritePin(DC_MOTOR_CfgParam[MOTOR_Instance].DIR1_GPIO, DC_MOTOR_CfgParam[MOTOR_Instance].DIR1_PIN, 0);
		HAL_GPIO_WritePin(DC_MOTOR_CfgParam[MOTOR_Instance].DIR2_GPIO, DC_MOTOR_CfgParam[MOTOR_Instance].DIR2_PIN, 1);
	}

	/* Write The Speed Value To The PWM CH DutyCycle Register */
	if(DC_MOTOR_CfgParam[MOTOR_Instance].PWM_TIM_CH == TIM_CHANNEL_1)
	{
		DC_MOTOR_CfgParam[MOTOR_Instance].TIM_Instance->CCR1 = SPEED;
	}
	else if(DC_MOTOR_CfgParam[MOTOR_Instance].PWM_TIM_CH == TIM_CHANNEL_2)
	{
		DC_MOTOR_CfgParam[MOTOR_Instance].TIM_Instance->CCR2 = SPEED;
	}
	else if(DC_MOTOR_CfgParam[MOTOR_Instance].PWM_TIM_CH == TIM_CHANNEL_3)
	{
		DC_MOTOR_CfgParam[MOTOR_Instance].TIM_Instance->CCR3 = SPEED;
	}
	else
	{
		DC_MOTOR_CfgParam[MOTOR_Instance].TIM_Instance->CCR4 = SPEED;
	}
}

void DC_MOTOR_Set_Speed(uint8_t MOTOR_Instance, uint16_t SPEED)
{
	/* Write The Speed Value To The PWM CH DutyCycle Register */
	if(DC_MOTOR_CfgParam[MOTOR_Instance].PWM_TIM_CH == TIM_CHANNEL_1)
	{
		DC_MOTOR_CfgParam[MOTOR_Instance].TIM_Instance->CCR1 = SPEED;
	}
	else if(DC_MOTOR_CfgParam[MOTOR_Instance].PWM_TIM_CH == TIM_CHANNEL_2)
	{
		DC_MOTOR_CfgParam[MOTOR_Instance].TIM_Instance->CCR2 = SPEED;
	}
	else if(DC_MOTOR_CfgParam[MOTOR_Instance].PWM_TIM_CH == TIM_CHANNEL_3)
	{
		DC_MOTOR_CfgParam[MOTOR_Instance].TIM_Instance->CCR3 = SPEED;
	}
	else
	{
		DC_MOTOR_CfgParam[MOTOR_Instance].TIM_Instance->CCR4 = SPEED;
	}
}

void DC_MOTOR_Set_Dir(uint8_t MOTOR_Instance, uint8_t DIR)
{
	/* Write To The 2 Direction Control Pins */
	if(DIR == DIR_ClockWıse)
	{
		HAL_GPIO_WritePin(DC_MOTOR_CfgParam[MOTOR_Instance].DIR1_GPIO, DC_MOTOR_CfgParam[MOTOR_Instance].DIR1_PIN, 1);
		HAL_GPIO_WritePin(DC_MOTOR_CfgParam[MOTOR_Instance].DIR2_GPIO, DC_MOTOR_CfgParam[MOTOR_Instance].DIR2_PIN, 0);
	}
	else if(DIR == DIR_CClockWıse)
	{
		HAL_GPIO_WritePin(DC_MOTOR_CfgParam[MOTOR_Instance].DIR1_GPIO, DC_MOTOR_CfgParam[MOTOR_Instance].DIR1_PIN, 0);
		HAL_GPIO_WritePin(DC_MOTOR_CfgParam[MOTOR_Instance].DIR2_GPIO, DC_MOTOR_CfgParam[MOTOR_Instance].DIR2_PIN, 1);
	}
}

void DC_MOTOR_Stop(uint8_t MOTOR_Instance)
{
	/* Write To The 2 Direction Control Pins */
	HAL_GPIO_WritePin(DC_MOTOR_CfgParam[MOTOR_Instance].DIR1_GPIO, DC_MOTOR_CfgParam[MOTOR_Instance].DIR1_PIN, 0);
	HAL_GPIO_WritePin(DC_MOTOR_CfgParam[MOTOR_Instance].DIR2_GPIO, DC_MOTOR_CfgParam[MOTOR_Instance].DIR2_PIN, 0);

	/* Write ZERO To The PWM Ch DutyCycle Register */
	if(DC_MOTOR_CfgParam[MOTOR_Instance].PWM_TIM_CH == TIM_CHANNEL_1)
	{
		DC_MOTOR_CfgParam[MOTOR_Instance].TIM_Instance->CCR1 = 0;
	}
	else if(DC_MOTOR_CfgParam[MOTOR_Instance].PWM_TIM_CH == TIM_CHANNEL_2)
	{
		DC_MOTOR_CfgParam[MOTOR_Instance].TIM_Instance->CCR2 = 0;
	}
	else if(DC_MOTOR_CfgParam[MOTOR_Instance].PWM_TIM_CH == TIM_CHANNEL_3)
	{
		DC_MOTOR_CfgParam[MOTOR_Instance].TIM_Instance->CCR3 = 0;
	}
	else
	{
		DC_MOTOR_CfgParam[MOTOR_Instance].TIM_Instance->CCR4 = 0;
	}
}

/*uint32_t DC_MOTOR_Get_MaxFreq(uint8_t MOTOR_Instance)
{
	uint32_t ARR_Value = 1;
    uint8_t i = 0;

	for(i=0; i<DC_MOTOR_CfgParam[MOTOR_Instance].PWM_RES_BITS; i++)
	{
		ARR_Value *= 2;
	}
	return ((DC_MOTOR_CfgParam[MOTOR_Instance].TIM_CLK_MHz*1000000)/ARR_Value);
}*/
